--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Eva - Salud</title>
 </head>
 
-<body>
-  <div id="root"></div>
+<body id="root">
+  <!-- <div id="root"></div> -->
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
